# speed_reading

./: .gitignore  BUG_REPORT.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  SPEC.md  TODOS.md  VISIONOS_PLAN.md  implementation_plan.md  pyproject.toml  ralph.sh  spec.md  visionos_spec.md
.claude/: settings.local.json
.claude/skills/: gstack
.xcodebuildmcp/: config.yaml
SpeedReading.xcodeproj/: project.pbxproj
SpeedReading/App/: ContentView.swift  NavigationRouter.swift  SpeedReadingApp.swift  SpeedReadingVisionApp.swift
SpeedReading/Resources/: Info.plist
output/: implementation_plan.md  spec.md
output/DerivedData/: info.plist
output/claude_runs/: ralph_run1_.txt  ralph_run2_.txt  ralph_run3_.txt  ralph_run4_.txt  ralph_run5_.txt  ralph_run6_.txt  ralph_run7_.txt  ralph_run8_.txt
prompts/: ralph.md
spec/: SPECIFICATION.md
speed_reading/: __main__.py  app.py
speed_reading/core/: __init__.py  orp.py  reader.py  tokenizer.py
speed_reading/gui/: controls.py  display.py  main_window.py  search_dialog.py  settings.py
speed_reading/io/: __init__.py  config.py  file_loader.py  progress.py
tests/: AccessibilityTests.swift  ChapterTimeRemainingTests.swift  FileImportServiceLoadTests.swift  FileImportServiceTests.swift  FontMetricsTests.swift  LandscapeLayoutTests.swift  LibraryDataServiceTests.swift  NavigationOverlayTests.swift  ReaderViewModelNavigationTests.swift  SpatialBookEntityTests.swift  SpatialControlBarAutoHideTests.swift  SpatialNavigationStateTests.swift  SwipeGestureTests.swift  test_file_loader.py  test_orp.py  test_reader.py  test_tokenizer.py
(+55 files in other folders)
