[project]
name = "speed-reading"
version = "0.1.0"
description = "Speed reading app with ORP (Optimal Recognition Point) technique"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ebooklib>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]

[project.scripts]
speed-reading = "speed_reading.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
